--- a/css/codeup-design-bootstrap.css
+++ b/css/codeup-design-bootstrap.css
@@ -44,7 +44,8 @@
     font-size: 0.9rem;
 }
 @media screen and (min-width: 257px) and (max-width: 768px) {
-    .hidden {
+    .hidden,
+    .horizontal-line {
         display: none;
     }
     .div-center {
@@ -55,5 +56,9 @@
 @media screen and (min-width: 768px) and (max-width:992px) {
     .hidden {
         display: none;
+    }
+    .div-center {
+        display: flex;
+        width: 100%;
     }
 }
